--- a/vignettes/exdex.bib
+++ b/vignettes/exdex.bib
@@ -14,6 +14,14 @@ doi="10.1007/BF01889987",
 url="http://dx.doi.org/10.1007/BF01889987"
 }
 
+@BOOK{Coles2001,
+   author="Coles, S. G.",
+    title="An Introduction to statistical modelling of extreme values",
+    year=2001,
+    publisher="Springer",
+    address="London",
+    note=""}
+
 @article{NA2016,
 author="Northrop, P. J.
 and Attalides, N.",
@@ -250,6 +258,22 @@ url={http://dx.doi.org/10.18637/jss.v040.i08}
 	year={2015},
 	school={University College London},
 	url = {http://discovery.ucl.ac.uk/1471121/1/Nicolas_Attalides_Thesis.pdf},}
+
+@Article{Northrop2015,
+author="Northrop, Paul J.",
+title="An efficient semiparametric maxima estimator of the extremal index",
+journal="Extremes",
+year="2015",
+month="Dec",
+day="01",
+volume="18",
+number="4",
+pages="585--603",
+abstract="The extremal index $\theta$, a measure of the degree of local dependence in the extremes of a stationary process, plays an important role in extreme value analyses. We estimate $\theta$ semiparametrically, using the relationship between the distribution of block maxima and the marginal distribution of a process to define a semiparametric model. We show that these semiparametric estimators are simpler and substantially more efficient than their parametric counterparts. We seek to improve efficiency further using maxima over sliding blocks. A simulation study shows that the semiparametric estimators are competitive with the leading estimators. An application to sea-surge heights combines inferences about $\theta$ with a standard extreme value analysis of block maxima to estimate marginal quantiles.",
+issn="1572-915X",
+doi="10.1007/s10687-015-0221-5",
+url="https://doi.org/10.1007/s10687-015-0221-5"
+}
 
 @article {FS2003,
 author = {Ferro, C. A. T. and Segers, J.},
