Updated README file

--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,8 @@ output: github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-
+exdex
+=============================================================================
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -12,11 +13,12 @@ knitr::opts_chunk$set(
 )
 ```
 
+### Estimation of the Extremal Index
+
 ### What does exdex do?
 
-The `exdex` package uses threshold inter-exceedance times based on the K-gaps 
-model and the method described in Northrop (2015) that is based on block maxima 
-to estimate the extremal index. The extremal index measures how strong is the dependence between the threshold exceedances. 
+The `exdex` package uses threshold inter-exceedance times based on the $K$-gaps
+model described in Suveges and Davison (2010) and the method described in Northrop (2015) that is based on block maxima to estimate the extremal index. The extremal index measures how strong is the dependence between the threshold exceedances. 
 
 ## Installation
 
@@ -28,10 +30,12 @@ devtools::install_github("ConstantinosChr/exdex")
 ```
 
 ## A simple example
+The two main functions in the `exdex` are `kgaps_mle` and `spm_mle` which are used to estimate the extremal index $\theta$. The user chooses the extreme value model and provides the data. Additionally, the user for the $K$-gaps model chooses an extreme value threshold thresh that is applied to data, whereas for the block maxima method he chooses $b$, the block size.
 
-For the K-gaps method:
+For the $K$-gaps method:
 
 ```{r}
+library(exdex)
 thresh <- quantile(newlyn, probs = 0.90)
 k_res <- kgaps_mle(newlyn, thresh, conf = 95)
 k_res$theta_mle
@@ -42,10 +46,11 @@ k_res$theta_ci
 For the block maxima method:
 
 ```{r}
+library(exdex)
 spm_mle(newlyn, 20)
 spm_mle(newlyn, 20, sliding = FALSE)
 ```
 
 ## Vignette
 
-See \code{vignette("exdex-vignette", package = "exdex")} for an overview of the package.
+See `vignette("exdex-vignette", package = "exdex")` for an overview of the package.
